// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArcView > renders mapview 1`] = `
<div>
  <div />
</div>
`;

exports[`ArcView > renders mapview 2`] = `<div />`;

exports[`ArcView > renders sceneview 1`] = `
<div>
  <div
    style="height: 100vh;"
  />
</div>
`;

exports[`ArcView > renders sceneview 2`] = `<div />`;
